Finish project structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
+        <div class="header">
+            <a class="headerText">Etch-a-sketch</a>
+            <button class="btn">New grid</button>
+        </div>
         <div class="container"></div>
     </body>
     <script src="javascript.js"></script>
